# zobhira

./: .env.production.example  .gitignore  DESIGN.md  README.md  docker-compose.prod.yml  docker-compose.yml  pipeline_working.md
apps/admin/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/admin/prisma/: schema.prisma
apps/admin/src/app/: globals.css  layout.tsx  page.tsx
apps/admin/src/components/: AdminChrome.tsx  AdminContestsTable.tsx  AdminJobsTable.tsx  AdminSidebar.tsx  Toast.tsx  (+8 more)
apps/web/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
apps/web/prisma/: schema.prisma
db/migrations/: 0001_init.sql  0002_add_logo.sql  0003_add_trgm.sql  0004_add_deadline.sql  0005_add_search_queries.sql  0006_add_tags_gin_index.sql  0007_add_contests.sql  0008_add_contest_summary.sql  0009_add_job_formatted_description.sql  0010_add_is_active_indexes.sql  0011_add_scraper_sources.sql  0012_add_dispatch_log.sql
deploy/: DEPLOY.md
services/scraper/: .dockerignore  .env.example  Dockerfile  api.py  contest_scheduler.py  designation_classifier.py  pyproject.toml  scheduler.py  taxonomy.py
services/scraper/db/: repository.py
services/scraper/scrapers/: base.py  contest_base.py  dev_community.py  linkedin.py  llm_fallback.py  remoteok.py  talentd.py  ycombinator.py
services/scraper/scripts/: reap_stale.py  run_contest_scrape.py  run_scrape.py
services/scraper/utils/: contest_summarizer.py  dedup.py  http.py  job_formatter.py  logo_lookup.py  rate_limit.py  text.py
(+89 files in other folders)
