[project]
name = "job-portal-scraper"
version = "0.1.0"
description = "Scraping microservice for the Job Portal project"
requires-python = ">=3.12,<4.0"
dependencies = [
    "scrapegraphai>=1.35.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.0",
    "playwright>=1.45.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "psycopg[binary]>=3.2.0",
    "apscheduler>=3.10.0",
    "tenacity>=8.5.0",
    "feedparser>=6.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scrapers*", "db*", "utils*", "scripts*"]
